@@ -1094,6 +1094,9 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY (__NR_process_vm_readv,       sys_process_vm_readv),        // 345
    LINX_ (__NR_process_vm_writev,      sys_process_vm_writev),       // 346
    //..
+   LINX_(__NR_sched_setattr,           sys_sched_setattr),           // 349
+   LINXY(__NR_sched_getattr,           sys_sched_getattr),           // 350
+   //..
    LINXY (__NR_getrandom,              sys_getrandom),               // 353
    LINXY (__NR_memfd_create,           sys_memfd_create),            // 354
    //..
