@@ -804,6 +804,8 @@ static SyscallTableEntry syscall_main_table[] = {
    LINX_ (__NR_process_vm_writev,      sys_process_vm_writev),
    LINX_ (__NR_kcmp,                   sys_kcmp),
    LINX_ (__NR_renameat2,              sys_renameat2),
+   LINX_ (__NR_sched_setattr,          sys_sched_setattr),
+   LINXY (__NR_sched_getattr,          sys_sched_getattr),
    LINXY (__NR_getrandom,              sys_getrandom),
    LINXY (__NR_memfd_create,           sys_memfd_create),
    LINXY (__NR_statx,                  sys_statx),
