@@ -40,6 +40,7 @@ To see details of a given bug, visit
 where XXXXXX is the bug number as listed below.
 
 345077  linux syscall execveat support (linux 3.19)
+369029  handle linux syscalls sched_getattr and sched_setattr
 n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.
 
 423021  PPC:  Add missing ISA 3.0 documentation link and HWCAPS test.
